--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -20,13 +20,13 @@
         --input: 240 5.9% 90%;
         --ring: 240 5.9% 10%;
         --radius: 0.5rem;
-        --sidebar-background: 0 0% 98%;
-        --sidebar-foreground: 240 5.3% 26.1%;
-        --sidebar-primary: 240 5.9% 10%;
-        --sidebar-primary-foreground: 0 0% 98%;
-        --sidebar-accent: 240 4.8% 95.9%;
-        --sidebar-accent-foreground: 240 5.9% 10%;
-        --sidebar-border: 220 13% 91%;
+        --sidebar-background: 240 4.8% 95.9%; /* zinc-100 */
+        --sidebar-foreground: 240 5.2% 33.9%; /* zinc-600 */
+        --sidebar-primary: 240 5.9% 10%; /* zinc-900 */
+        --sidebar-primary-foreground: 0 0% 98%; /* zinc-50 */
+        --sidebar-accent: 240 5.9% 90%; /* zinc-200 */
+        --sidebar-accent-foreground: 240 5.9% 10%; /* zinc-900 */
+        --sidebar-border: 240 5% 64.9%; /* zinc-400 */
         --sidebar-ring: 217.2 91.2% 59.8%;
     }
     .dark {
@@ -49,13 +49,13 @@
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
         --ring: 240 4.9% 83.9%;
-        --sidebar-background: 240 5.9% 10%;
-        --sidebar-foreground: 240 4.8% 95.9%;
-        --sidebar-primary: 224.3 76.3% 48%;
-        --sidebar-primary-foreground: 0 0% 100%;
-        --sidebar-accent: 240 3.7% 15.9%;
-        --sidebar-accent-foreground: 240 4.8% 95.9%;
-        --sidebar-border: 240 3.7% 15.9%;
+        --sidebar-background: 240 5.9% 10%; /* zinc-900 */
+        --sidebar-foreground: 240 5% 64.9%; /* zinc-400 */
+        --sidebar-primary: 240 5.3% 26.1%; /* zinc-700 */
+        --sidebar-primary-foreground: 0 0% 98%; /* zinc-50 */
+        --sidebar-accent: 240 3.7% 15.9%; /* zinc-800 */
+        --sidebar-accent-foreground: 240 5% 64.9%; /* zinc-400 */
+        --sidebar-border: 240 5.3% 26.1%; /* zinc-700 */
         --sidebar-ring: 217.2 91.2% 59.8%;
     }
 }
