--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -34,3 +34,86 @@ select:focus {
 #message-textarea {
     border: none !important;
 }
+
+/**
+ * ==============================================
+ * Dot Flashing
+ * ==============================================
+ */
+ .dot-flashing {
+  position: relative;
+  width: 7px;
+  height: 7px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #ffffff;
+  animation: dot-flashing 1s infinite linear alternate;
+  animation-delay: 0.5s;
+  margin: 7px 10px; /* Vertical margin: 8px, Horizontal margin: 20px */
+}
+
+.dot-flashing::before, .dot-flashing::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+
+.dot-flashing::before {
+  left: -10px;
+  width: 7px;
+  height: 7px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #ffffff;
+  animation: dot-flashing 1s infinite alternate;
+  animation-delay: 0s;
+}
+
+.dot-flashing::after {
+  left: 10px;
+  width: 7px;
+  height: 7px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #ffffff;
+  animation: dot-flashing 1s infinite alternate;
+  animation-delay: 1s;
+}
+
+@keyframes dot-flashing {
+  0% {
+      background-color: #ffffff;
+  }
+  50%, 100% {
+      background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
+/**
+ * ==============================================
+ * Sidebar
+ * ==============================================
+ */
+.sidebar-init #sidebar,
+.sidebar-init #sidebarContent {
+    transition: none !important;
+}
+
+#sidebarContent,
+#sidebarHeader {
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+}
+
+.sidebar-inner {
+    width: 270px;
+    position: relative;
+}
+
+.sidebar-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
