--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,7 +68,8 @@
     --sidebar-background: 240 10% 3.9%;
     /* --sidebar-background: 240 5.9% 10%; */
     --sidebar-foreground: 240 4.8% 95.9%;
-    --sidebar-primary: 224.3 76.3% 48%;
+    /* --sidebar-primary: 224.3 76.3% 48%; */
+    --sidebar-primary: 240 3.7% 15.9;
     --sidebar-primary-foreground: 0 0% 100%;
     --sidebar-accent: 240 3.7% 15.9%;
     --sidebar-accent-foreground: 240 4.8% 95.9%;
