changelog to the right

--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ body {
     padding: 0;
     height: 100%;
     width: 100%;
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'Commissioner', sans-serif;
     background-color: #000000;
     color: #ffffff;
     position: fixed;
