--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ body {
     padding: 0;
     height: 100%;
     width: 100%;
-    font-family: 'Commissioner', sans-serif;
+    font-family: "JetBrains Mono", monospace;
     font-size: 14px;
     background-color: #000000;
     color: #ffffff;
