--- a/static/templates/button.mustache
+++ b/static/templates/button.mustache
@@ -1,1 +1,1 @@
-<a class="btn-nav black bg-white hover:bg-gray-100 text-black font-mono text-xs py-2 px-4 w-full inline-flex items-center" href="{{href}}"><i class="nav-active-icon mr-2"></i>{{text}}</a>
+{"href": "{{href}}", "text": "{{text}}"}
