--- a/static/templates/button.mustache
+++ b/static/templates/button.mustache
@@ -1,1 +1,1 @@
-<a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" href="{{href}}">{{text}}</a>
+<a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full py-2 px-6 border border-white" href="{{href}}">{{text}}</a>
