pnpm dlx tailwindcss init

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,1 +1,11 @@
-<h1>It works</h1>
+<!doctype html>
+<html lang="en">
+    <head>
+        <link href="/assets/main.css" rel="stylesheet" />
+        <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
+    </head>
+    <body>
+        <h1>Howdy!</h1>
+    </body>
+</html>
+
