--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,6 +5,6 @@
     <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Howdy!</h1>
+    <h1 class="text-green-500">Howdy!</h1>
   </body>
 </html>
