--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,10 +1,8 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <link href="/assets/main.css" rel="stylesheet" />
-    <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1 class="text-green-500">Howdy!</h1>
-  </body>
-</html>
+<!-- prettier-ignore -->
+{% extends "base.html" %}
+
+{% block title %}Hello!{% endblock %}
+
+{% block content %}
+<h1>OpenAgents</h1>
+{% endblock %}
