--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,5 +4,7 @@
 {% block title %}Hello!{% endblock %}
 
 {% block content %}
-<h1>OpenAgents</h1>
-{% endblock %}
+<div class="h-full w-full flex justify-center items-center">
+  <h1>OpenAgents</h1>
+  <div>{% endblock %}</div>
+</div>
