--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,7 +4,7 @@
 {% block title %}Hello!{% endblock %}
 
 {% block content %}
-<div class="h-full w-full flex justify-center items-center">
+<div class="min-h-screen w-full flex justify-center items-center">
   <h1>OpenAgents</h1>
-{% endblock %}
 </div>
+{% endblock %}
