--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link href="/assets/main.css" rel="stylesheet" />
-    <link href="/static/css/fonts.css" rel="stylesheet" />
+    <link href="/assets/fonts.css" rel="stylesheet" />
     <title>{% block title %}{{ title }}{% endblock %}</title>
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     {% block head %}{% endblock %}
