--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,7 +4,7 @@
 {% block title %}Hello!{% endblock %}
 
 {% block content %}
-<div class="min-h-screen w-full flex justify-center items-center">
-  <h1>OpenAgents</h1>
+<div class="w-full">
+  <h1>Welcome to OpenAgents</h1>
 </div>
 {% endblock %}
