--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,26 @@
     {% block head %}{% endblock %}
   </head>
   <body class="fixed min-h-screen w-screen bg-black text-white font-mono">
-    <div id="content" class="flex min-h-screen">
-      {% block content %}{% endblock %}
+    <div id="content" class="flex min-h-screen mx-auto">
+      <div class="w-[60rem] m-6 px-4 border border-white">
+        <header class="py-2 mb-5" id="static-header">
+          <div class="flex justify-between items-center w-full">
+            <span class="text-lg font-bold">OpenAgents</span>
+          </div>
+          <div class="mt-4">
+            <nav>
+              <ul
+                class="grid grid-cols-3 gap-2 lg:grid-cols-6"
+                id="nav-buttons"
+              >
+                Button
+              </ul>
+            </nav>
+          </div>
+        </header>
+
+        {% block content %}{% endblock %}
+      </div>
     </div>
   </body>
 </html>
